# ToolAnything

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  OPENCLAW.md  README.md  debug_import.py  llms.txt  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  verify_server.py
.github/workflows/: docs.yml  package-toolanything-skill.yml  sync-wiki.yml  tests.yml
app/backend_daemon/: __init__.py  logging_utils.py  main.py  worker.py
docs/: IMPORTS.md  README.md  architecture-walkthrough.md  build-docs.md  cli-export.md  docs-map.md  index.md  mcp-test-client-spec.md  migration-guide.md  standard-tools.md
docs/refactor/: callable-coupling-baseline.md  migration-baseline.md
docs/reference/: index.md
examples/: README.md  __init__.py  _catalog.json  demo_mcp.py  demo_mcp_stdio.py  demo_mcp_streamable_http.py  http_tool.py  onnx_tool.py  pytorch_tool.py  sql_tool.py
examples/basic_tool_chatbot/: README.md  server.py
examples/basic_tool_chatbot/web/: app.js  index.html  styles.css
examples/class_method_tools/: README.md  demo.py
examples/finance_tools/: README.md  pipeline_demo.py
examples/mcp_server_demo/: README.md  client.py  server.py
examples/mcp_transports/: README.md
examples/non_function_tools/: README.md  __init__.py  http_tool.py  onnx_tool.py  pytorch_tool.py  rebuild_tiny_vad_onnx.py  sql_tool.py
examples/non_function_tools/assets/: analytics.sqlite  (+1 more)
examples/opencv_mcp_web/: README.md  __init__.py  dual_protocol_demo.py  image_ops.py  server.py  smoke_test.py  web_server.py
examples/protocol_boundary/: README.md
examples/quickstart/: 00_setup.md  01_define_tools.py  02_run_server.py  03_search_and_call.py  README.md  search_tools.py  stdio_roundtrip.py  tools.py
examples/standard_tools/: 01_register_and_export.py  02_write_tools_opt_in.py  03_provider_search.py  README.md
examples/streamable_http/: 01_handshake_and_list.py  02_response_modes.py  03_resume_and_close.py  README.md  shared_demo.py
examples/tool_selection/: 01_metadata_catalog.py  02_constraints_search.py  02_constraints_search.sh  03_custom_strategy.py  README.md  __init__.py  bfcl_converter.py  bfcl_pipeline.py  catalog_shared.py  constraints_search.py  custom_strategy.py  hf_dataset_exporter.py  metadata_catalog.py  semantic_benchmark.py
examples/vision_tools/: README.md  __init__.py  server.py  yolo_person_tool.py
examples/weather_tool/: README.md  main.py
scripts/: build_docs.sh  generate_api_docs.py  lint_format.sh  package_skills.py  sync_github_wiki.ps1
skills/: toolanything-mcp-router.skill  toolanything-platform-ops.skill  toolanything-tool-wrapper.skill
skills/toolanything-mcp-router/: SKILL.md
skills/toolanything-platform-ops/: SKILL.md
skills/toolanything-tool-wrapper/: SKILL.md
src/toolanything/: __init__.py  __main__.py  cli.py  exceptions.py  openai_runtime.py
tests/: test_adapter_protocol_mapping.py  test_async_execution.py  test_bfcl_converter.py  test_bfcl_pipeline.py  test_callable_invoker.py  test_cli.py  test_cli_export.py  test_concurrency.py  test_context_injection.py  test_decorator.py  test_docstring_parser.py  test_doctor_stdio.py  test_example_class_method_tools.py  test_example_opencv_mcp_web.py  test_examples_catalog.py  test_hf_dataset_exporter.py  test_http_tools.py  test_inspector_service.py  test_invoker_runtime_path.py  test_manager_batch.py  test_mcp_adapter.py  test_mcp_server_integration.py  test_mcp_streamable_http.py  test_model_tools.py  test_openai_adapter.py  test_openai_runtime.py  test_package_skills_script.py  test_parallel_step.py  test_persistent_state_manager.py  test_pipeline.py  test_pipeline_context.py  test_refactor_phase0_baseline.py  test_registry_cache.py  test_registry_execution_semantics.py  test_registry_namespacing.py  test_runtime_serve.py  test_schema_engine.py  test_security_and_serializer.py  test_semantic_benchmark.py  test_semantic_search.py  (+9 more)
tests/fixtures/: __init__.py  async_tools.py  sample_tools.py
tests/protocol/: __init__.py  test_mcp_protocol_core.py
wiki/: Architecture-Walkthrough.md  CLI-Reference.md  Diagnostics-and-Troubleshooting.md  Documentation-and-API-Reference.md  Examples-and-Learning-Paths.md  Getting-Started.md  Home.md  MCP-Serving-and-Transports.md  Maintaining-the-Wiki.md  Migration-Guide.md  OpenAI-Tool-Calling.md  Standard-Tools.md  Tool-Definition-and-Registration.md  _Footer.md  _Sidebar.md
(+119 files in other folders)
