[project]
name = "toolanything"
version = "0.1.0"
description = "One function to MCP and Tool calling"
authors = [{ name = "ToolAnything" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["tenacity>=8.2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "asyncio: 非同步測試用標記",
]
