[metadata]
name = toolanything
version = 0.1.0
description = One Function to MCP and Tool calling
long_description = file: README.md
long_description_content_type = text/markdown
author = AllanYiin
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=23.0
    flake8>=6.0
    mypy>=1.0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,.eggs
ignore = E203,W503
